--- a/lsp-sample/package.json
+++ b/lsp-sample/package.json
@@ -17,7 +17,11 @@
 		"vscode": "^1.63.0"
 	},
 	"activationEvents": [
-		"onLanguage:plaintext"
+		"onLanguage:plaintext",
+		"onLanguage:javascript",
+		"onLanguage:javascriptreact",
+		"onLanguage:typescript",
+		"onLanguage:typescriptreact"
 	],
 	"main": "./client/out/extension",
 	"contributes": {
